fixes alignment issue in header

--- a/css/index.css
+++ b/css/index.css
@@ -172,6 +172,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   white-space: nowrap;
 }
 a {
