--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,7 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   white-space: nowrap;
 }
 
